sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:21: error: not found: value ecart
  if((ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]==9 ||((ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int])==10){return 11}
      ^AlgCombSort11:21: error: not found: value ecart
  if((ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]==9 ||((ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int])==10){return 11}
                                                                 ^AlgCombSort11:22: error: not found: value ecart
  else{return (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]}
               ^